# Rust_Api

./: Cargo.toml  diesel.toml
migrations/2024-11-07-100950_add_blocks/: up.sql
src/: binance.rs  firechain.rs  main.rs  models.rs  schema.rs
